Fix choice card wrapping
choice cards should now wrap on resize of window

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,6 +76,7 @@ body {
 .game-container {
   background-color: #282c34;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -108,9 +109,6 @@ body {
 .choice-icon {
   height: 1em;
   width: 10em;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   line-height: 1em;
   font-size: 0.9em;
   margin: 0.5em 0.5em 0.5em 0.5em;
@@ -278,6 +276,7 @@ input[type="submit"]:hover {
 .game-button {
   background: none;
   border: white;
+  padding:0px;
   border-radius: 10px;
   color: #fff;
   font-family: "Alata", Arial, sans-serif;
